--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.11.19",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "stripe": "^8.140.0"
   }
 }
